--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -16,13 +16,13 @@
 }
 
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 
 
